--- a/src/notebook.css
+++ b/src/notebook.css
@@ -82,6 +82,10 @@
     margin-left: -30px;
     margin-top: 30px;
     cursor: pointer;
+    padding: 0;
+    height: 20px;
+    text-align: center;
+    width: 20px;
 }
 
 .nb-input:before {
