--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,25 @@ body {
     font-size: 14px;
 }
 
+button {
+    cursor: pointer;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;    
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;    
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align:center;
+    transition: all 0.2s;
+}
+
+button:hover{
+    opacity: 0.7;
+}
+
 #root {
     padding-left: 40px;        
     max-width: 1024px;
