--- a/src/notebook.css
+++ b/src/notebook.css
@@ -1,8 +1,9 @@
 .nb-notebook {
-    line-height: 1.5;    
+    line-height: 1.5;
 }
 
-.nb-stdout, .nb-stderr {
+.nb-stdout,
+.nb-stderr {
     white-space: pre-wrap;
     margin: 1em 0;
     padding: 0.1em 0.5em;
@@ -12,7 +13,7 @@
     background-color: #FAA;
 }
 
-.nb-cell + .nb-cell {
+.nb-cell+.nb-cell {
     margin-top: 0.5em;
 }
 
@@ -25,9 +26,10 @@
     font-weight: bold;
 }
 
-.nb-output th, .nb-output td {
+.nb-output th,
+.nb-output td {
     border: 1px solid #000;
-    padding: 0.25em;    
+    padding: 0.25em;
     text-align: left;
     vertical-align: middle;
     border-collapse: collapse;
@@ -40,7 +42,7 @@
 }
 
 .nb-cell {
-    position: relative;    
+    position: relative;
 }
 
 .nb-raw-cell {
@@ -52,18 +54,19 @@
 }
 
 .nb-output {
-    min-height: 1em;    
+    min-height: 1em;
     width: 100%;
     overflow-x: scroll;
     border-right: 1px dotted #CCC;
 }
 
 .nb-output img {
-    max-width: 100%;    
+    max-width: 100%;
 }
 
-.nb-output:before, .nb-input:before {
-    position: absolute;    
+.nb-output:before,
+.nb-input:before {
+    position: absolute;
     font-family: monospace;
     color: #999;
     left: -7.5em;
@@ -91,11 +94,26 @@
 .nb-input:before {
     content: "In [" attr(data-prompt-number) "]:";
 }
+
 .nb-output:before {
     content: "Out [" attr(data-prompt-number) "]:";
     margin-top: 1em;
 }
 
+@media only screen and (max-width: 600px) {
+    #root{
+        padding-left: 30px;
+    }
+    
+    .nb-input:before {
+        content: "[" attr(data-prompt-number) "]:";
+    }
+
+    .nb-output:before {
+        content: "[" attr(data-prompt-number) "]:";
+    }
+}
+
 div[style="max-height:1000px;max-width:1500px;overflow:auto;"] {
-    max-height: none !important;    
+    max-height: none !important;
 }
