--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,12 @@ button.runall {
     z-index: 9999;
 }
 
+button.loading {
+    border: 2px solid #f3f3f3;    
+    animation: spin 1s linear infinite;
+    border-top: 2px solid #555;    
+}
+
 button:hover{
     opacity: 0.7;
 }
@@ -66,3 +72,7 @@ button:hover{
     color: #0077EE;
 }
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
